Bug 435400 - Renaming of online quotes does not work
Summary: Renaming of online quotes does not work
Status: RESOLVED FIXED
Alias: None
Product: alkimia
Classification: Frameworks and Libraries
Component: Online quotes widget (other bugs)
Version First Reported In: 8.1.0
Platform: openSUSE Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-05 23:33 UTC by Ralf Habacker
Modified: 2021-08-19 14:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2021-04-05 23:33:25 UTC
STEPS TO REPRODUCE
1. download portable package from kmymoney5 snapshots (https://kmymoney.org/snapshots.php#kmymoney5-aq6)
2. unpack the portable package
2. start online quotes editor
3. select profile starting with name 'alkimia'
4. select the desired online quote
5. press <F2>, change the name and press <RETURN>

OBSERVED RESULT
The name of the corresponding online quote did not change

EXPECTED RESULT
The name of the corresponding online quote should reflect the entered text

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.65.0
Qt Version: 5.11.0
Comment 1 Ralf Habacker 2021-08-11 10:59:50 UTC
Git commit a9dab1bb81aac530701c7da3e8e7768c41eb9151 by Ralf Habacker.
Committed on 11/08/2021 at 10:59.
Pushed by habacker into branch '8.1'.

Fix 'Renaming of online quotes does not work'

Since the test case for renaming an online quote source shows no errors,
the renaming problem is in the online course widget. After renaming a
quote source in the widget, the current name is not used again if there
is only one entry with that name.
FIXED-IN:8.1.1

M  +2    -1    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/a9dab1bb81aac530701c7da3e8e7768c41eb9151
Comment 2 Ralf Habacker 2021-08-19 14:26:11 UTC
Git commit 3648bfc6fba8850dcfc093913749143cd34be0fc by Ralf Habacker.
Committed on 19/08/2021 at 14:24.
Pushed by habacker into branch 'master'.

Fix 'Renaming of online quotes does not work'

Since the test case for renaming an online quote source shows no errors,
the renaming problem is in the online course widget. After renaming a
quote source in the widget, the current name is not used again if there
is only one entry with that name.
FIXED-IN:8.1.1

M  +2    -1    src/alkonlinequoteswidget.cpp

https://invent.kde.org/office/alkimia/commit/3648bfc6fba8850dcfc093913749143cd34be0fc