Fix 'Renaming of online quotes does not work'

Since the test case for renaming an online quote source shows no errors,
the renaming problem is in the online course widget. After renaming a
quote source in the widget, the current name is not used again if there
is only one entry with that name.

BUG:435400
FIXED-IN:8.1.1